@@ -40,7 +40,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 	struct variable_list *vars;
 	int status;
 
-	char 	*p;
+	char 	*p, *c;
 	double dbl;
 
 	unsigned char *ip;
@@ -262,7 +262,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 		for(vars = response->variables; vars; vars = vars->next_variable)
 		{
 			int count=1;
-			zabbix_log( LOG_LEVEL_DEBUG, "AV loop()");
+			zabbix_log( LOG_LEVEL_DEBUG, "AV loop(%d)", vars->type);
 
 /*			if(	(vars->type == ASN_INTEGER) ||*/
 			if(	(vars->type == ASN_UINTEGER)||
@@ -352,9 +352,38 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 				}
 				else
 				{
-					p = malloc(vars->val_len+1);
+					zabbix_log( LOG_LEVEL_DEBUG, "ASN_OCTET_STR [%s]", vars->val.string);
+					zabbix_log( LOG_LEVEL_DEBUG, "ASN_OCTET_STR [%d]", vars->val_len);
+					
+					p = malloc(1024);
 					if(p)
 					{
+						memset(p,0,1024);
+						snprint_value(p, 1023, vars->name, vars->name_length, vars);
+						/* Skip STRING: and STRING_HEX: */
+						c=strchr(p,':');
+						if(c==NULL)
+						{
+							SET_STR_RESULT(value, strdup(p));
+						}
+						else
+						{
+							SET_STR_RESULT(value, strdup(c+1));
+						}
+						zabbix_log( LOG_LEVEL_DEBUG, "ASN_OCTET_STR [%s]", p);
+						free(p);
+					}
+					else
+					{
+						zbx_snprintf(error,MAX_STRING_LEN-1,"Cannot allocate required memory");
+						zabbix_log( LOG_LEVEL_ERR, "%s", error);
+						SET_MSG_RESULT(value, strdup(error));
+					}
+
+/*					p = malloc(vars->val_len+1);
+					if(p)
+					{
+						zabbix_log( LOG_LEVEL_WARNING, "Result [%s] len [%d]",vars->val.string,vars->val_len);
 						memcpy(p, vars->val.string, vars->val_len);
 						p[vars->val_len] = '\0';
 
@@ -365,7 +394,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 						zbx_snprintf(error,sizeof(error),"Cannot allocate required memory");
 						zabbix_log( LOG_LEVEL_ERR, "%s", error);
 						SET_MSG_RESULT(value, strdup(error));
-					}
+					}*/
 				}
 			}
 			else if(vars->type == ASN_IPADDRESS)
